--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": "/t",
+      "src": "/t(?:\\?.*)?",
       "methods": ["GET"],
       "dest": "/api/uid-redirect.js"
     },
@@ -20,7 +20,10 @@
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ]
+  ],
+  "env": {
+    "SUPABASE_URL": "@supabase_url",
+    "SUPABASE_ANON_KEY": "@supabase_anon_key",
+    "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key"
+  }
 }
-
-
