--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,26 @@
 # === Supabase ===
-SUPABASE_URL=https://your-project.supabase.co                # ✅ Your Supabase project URL
-SUPABASE_ANON_KEY=your-anon-key-here                         # ✅ Public client key (used on frontend)
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here         # ✅ Secret server key (used in API calls)
+SUPABASE_URL=https://pawpaya.supabase.co
+SUPABASE_ANON_KEY=your-real-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-real-service-role-key-here
 
-# === Plaid (optional for ACH) ===
-PLAID_CLIENT_ID=your-plaid-client-id                         # 🔍 Only used if ACH payouts get built
-PLAID_SECRET=your-plaid-secret
+# === Plaid (skipped) ===
+PLAID_CLIENT_ID=
+PLAID_SECRET=
 PLAID_ENV=sandbox
 
-# === Dwolla ===
-DWOLLA_KEY=your-dwolla-key                                   # 🔍 For future payout routing
-DWOLLA_SECRET=your-dwolla-secret
+# === Dwolla (skipped) ===
+DWOLLA_KEY=
+DWOLLA_SECRET=
 DWOLLA_ENV=sandbox
 
-# === Tapify === (💡 Rename if you want)
-NEXT_PUBLIC_BASE_URL=https://yourdomain.com                  # ✅ Used for generating full links
-NEXT_PUBLIC_TAPIFY_BRAND_NAME=Tapify                         # 🔍 Used in UI (you can change to "Pawpaya")
+# === Tapify Branding ===
+NEXT_PUBLIC_BASE_URL=https://companyozzie.vercel.app
+NEXT_PUBLIC_TAPIFY_BRAND_NAME=Pawpaya
 
 # === Admin ===
-ADMIN_EMAIL=admin@example.com                                # 🔍 Used to give admin access in /admin.js
+ADMIN_EMAIL=admin@example.com
 
-# === Optional Defaults ===
-DEFAULT_VENDOR_COMMISSION=50                                 # ✅ Used as fallback % payout
+# === Default Commissions ===
+DEFAULT_VENDOR_COMMISSION=50
 DEFAULT_RETAILER_COMMISSION=20
 DEFAULT_SOURCER_COMMISSION=10
