--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ NEXT_PUBLIC_BASE_URL=https://companyozzie.vercel.app
 NEXT_PUBLIC_TAPIFY_BRAND_NAME=Pawpaya
 
 # === Admin ===
-ADMIN_EMAIL=admin@example.com
+ADMIN_EMAIL=pawpayaco@gmail.com
 
 # === Default Commissions ===
 DEFAULT_VENDOR_COMMISSION=50
